
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct udp_session {int sd; int saddr; } ;
struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_zero; TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct hostent {int dummy; } ;


 int AF_INET ;
 int SOCK_DGRAM ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int inet_addr (char*) ;
 int memcpy (int *,struct sockaddr_in*,int) ;
 int memset (int *,char,int) ;
 int printf (char*) ;
 int socket (int ,int ,int ) ;

int make_udp(struct udp_session *p, char *remotehost, int port)
{
 int sd;
 int ret;
 struct sockaddr_in saddr;
 struct hostent *he;

 sd = socket(AF_INET,SOCK_DGRAM,0);

 if (sd == -1) {
  printf("error making socket\n");
  return -1;
 }

 he = gethostbyname(remotehost);

 saddr.sin_family = AF_INET;
 saddr.sin_port = htons(port);
 saddr.sin_addr.s_addr = inet_addr(remotehost);
 memset(&(saddr.sin_zero), '\0', 8);
 p->sd = sd;
 memcpy(&p->saddr,&saddr,sizeof(struct sockaddr_in));

 printf("udp socket ready\n");

 return 0;
}
