; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_3407.c_make_udp.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_3407.c_make_udp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.udp_session = type { i32, i32 }
%struct.sockaddr_in = type { i32, %struct.TYPE_2__, i32, i32 }
%struct.TYPE_2__ = type { i32 }
%struct.hostent = type { i32 }

@AF_INET = common dso_local global i32 0, align 4
@SOCK_DGRAM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"error making socket\0A\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"udp socket ready\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @make_udp(%struct.udp_session* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.udp_session*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.sockaddr_in, align 4
  %11 = alloca %struct.hostent*, align 8
  store %struct.udp_session* %0, %struct.udp_session** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %12 = load i32, i32* @AF_INET, align 4
  %13 = load i32, i32* @SOCK_DGRAM, align 4
  %14 = call i32 @socket(i32 %12, i32 %13, i32 0)
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %8, align 4
  %16 = icmp eq i32 %15, -1
  br i1 %16, label %17, label %19

17:                                               ; preds = %3
  %18 = call i32 @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %4, align 4
  br label %40

19:                                               ; preds = %3
  %20 = load i8*, i8** %6, align 8
  %21 = call %struct.hostent* @gethostbyname(i8* %20)
  store %struct.hostent* %21, %struct.hostent** %11, align 8
  %22 = load i32, i32* @AF_INET, align 4
  %23 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %10, i32 0, i32 3
  store i32 %22, i32* %23, align 4
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @htons(i32 %24)
  %26 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %10, i32 0, i32 2
  store i32 %25, i32* %26, align 4
  %27 = load i8*, i8** %6, align 8
  %28 = call i32 @inet_addr(i8* %27)
  %29 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %10, i32 0, i32 1
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 4
  %31 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %10, i32 0, i32 0
  %32 = call i32 @memset(i32* %31, i8 signext 0, i32 8)
  %33 = load i32, i32* %8, align 4
  %34 = load %struct.udp_session*, %struct.udp_session** %5, align 8
  %35 = getelementptr inbounds %struct.udp_session, %struct.udp_session* %34, i32 0, i32 0
  store i32 %33, i32* %35, align 4
  %36 = load %struct.udp_session*, %struct.udp_session** %5, align 8
  %37 = getelementptr inbounds %struct.udp_session, %struct.udp_session* %36, i32 0, i32 1
  %38 = call i32 @memcpy(i32* %37, %struct.sockaddr_in* %10, i32 16)
  %39 = call i32 @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %40

40:                                               ; preds = %19, %17
  %41 = load i32, i32* %4, align 4
  ret i32 %41
}

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local %struct.hostent* @gethostbyname(i8*) #1

declare dso_local i32 @htons(i32) #1

declare dso_local i32 @inet_addr(i8*) #1

declare dso_local i32 @memset(i32*, i8 signext, i32) #1

declare dso_local i32 @memcpy(i32*, %struct.sockaddr_in*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
